# Errand

./: AGENTS.md  Cargo.toml  README.md  a + b.lex  a.lex  basic.err.ast  enums  enums_data  errand.bash  ffi_test  fibonacci  foreign  pointStruct  temp  test_logging.lex  test_malloc  test_preir.rs  test_printf  tmp.txt
30.02 Notes/: Features.md  Syntax.md  Type System.md
30.02 Notes/Resources/: DuckLang.md  Elixer.md  Equivalence Saturation.md  How I wrote my own "proper" programming language.md  Janet.guide.md  NuShell.md  The Case For Dynamic Functional Programming.md  blog on language syntax.md
benches/: lexer.rs
docs/: WORKLIST_INFERENCE.md
lib/base/: NOTES.md
src/: lib.rs  main.rs
src/backend/: analysis.rs  built_in_methods.rs  bytecode.rs  compiler.rs  context_desugar.rs  cranelift_compiler.rs  environment.rs  errand_builtins.rs  fir.md  fir.rs  fir_gen.rs  interpreter.rs  ir_lowering.rs  llvm_compiler.rs  mod.rs  preir.md  preir.rs  preir_gen.rs  sir.rs  sir_gen.rs  sir_lowering.rs  structs.rs  worklist.rs
src/frontend/: ast.rs  lexer.rs  lower.rs  mod.rs  parser.rs  parser_b.rs  resolver.rs  type_inference.rs  typeof_eval.rs
src/logging/: mod.rs
tests/: basic.err  basic.err.ast  basic.err.lex  basic.lex  compile_run_golden.rs  function_test.err  generics_unsupported.rs  lexer_err_files.rs  pipes.err  simple_function.err  test_ffi.errand  test_ffi.errand.lex  test_printf_simple.err  variants.err
tests/addOne/: addOne  addOne.err  addOne.err.clif  addOne.err.last  addOne.err.lex  addOne.err.tast  addOneNoReturn.err
tests/basic/: basic.err.last  (+2 more)
(+102 files in other folders)
