[package]
name = "Errand"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
cranelift-frontend = "0.121.1"
cranelift-codegen = "0.121.1"
cranelift-module = "0.121.1"
cranelift = "0.121.1"
cranelift-native = "0.121.1"
cranelift-object = "0.121.1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"
env_logger = "0.10"
colored = "2.0"

[dev-dependencies]
criterion = "0.5"
stats_alloc = "0.1.10"

[[bench]]
name = "lexer"
harness = false
